--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,7 @@
 	<string name="action_settings">Settings</string>
 	<string name="hello_world">Hello world!</string>
 	<string name="title_activity_web_view">WebViewActivity</string>
-	<string name="title_activity_main">MainActivity</string>
+	<string name="title_activity_json">JsonActivity</string>
 	<string name="menu_settings">Settings</string>
 	<string name="no_items">No items to display!</string>
 	<string-array name="android_names">
@@ -27,4 +27,5 @@
 	<string name="share_chooser_title">How do you want to share?</string>
 	<string name="title_activity_Home">HomeActivity</string>
 	<string name="title_activity_rss">RssActivity</string>
+	<string name="title_activity_category">CategoryActivity</string>
 </resources>
